# calculator

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
src/calculator_ndozor/: __init__.py  calculator.py  version.py
