[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator_ndozor"
dynamic = ["version"]
description = "A simple calculator"
authors = [
    { name="David Ozokoye", email="davidozokoye@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gyrationtechs/calculator"
Issues = "https://github.com/gyrationtechs/calculator/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {attr = "calculator_ndozor.__version__"}
